--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="left-column">
             <!-- Ganti src dengan URL gambar Anda di GitHub -->
-            <img src="profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="profile.png" alt="Profile Picture" class="profile-pic">
             
             <div class="section">
                 <h2>Informasi Pribadi</h2>
