update jadi landing page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -146,5 +146,187 @@
             </div>
         </div>
     </div>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yudi Permana - Landing Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background: #f0f2f5;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            background: linear-gradient(90deg, #1f2937, #4b5563);
+            color: #fff;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        header h3 {
+            font-weight: 400;
+            font-size: 20px;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 40px auto;
+            background: #fff;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+            border-radius: 10px;
+            overflow: hidden;
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .left-column, .right-column {
+            padding: 30px;
+            flex: 1 1 300px;
+        }
+
+        .left-column {
+            background: #111827;
+            color: #fff;
+        }
+
+        .left-column img {
+            width: 120px;
+            border-radius: 12px;
+            display: block;
+            margin: 0 auto 20px;
+        }
+
+        .left-column h2 {
+            font-size: 16px;
+            border-bottom: 1px solid #444;
+            margin-top: 30px;
+            padding-bottom: 5px;
+        }
+
+        .left-column ul {
+            list-style: none;
+            margin-top: 10px;
+        }
+
+        .left-column ul li {
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+        }
+
+        .left-column ul li img {
+            width: 18px;
+            margin-right: 10px;
+        }
+
+        .right-column h2 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 5px;
+            text-transform: uppercase;
+        }
+
+        .right-column ul {
+            list-style: none;
+            margin-top: 10px;
+        }
+
+        .right-column ul li {
+            margin-bottom: 15px;
+        }
+
+        .right-column ul li strong {
+            font-size: 16px;
+            display: block;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            background: #e5e7eb;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Yudi Permana</h1>
+        <h3>Database Administrator (DBA) & Content Creator</h3>
+    </header>
+
+    <div class="container">
+        <div class="left-column">
+            <img src="profile.png" alt="Foto Profil">
+            <h2>Kontak</h2>
+            <ul>
+                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/email.png"> permanayudhi16@gmail.com</li>
+                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/phone.png"> +62 857-1049-6327</li>
+                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/instagram-new.png"> permanastudio_ps</li>
+                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/youtube-play.png"> Permana Studio Official</li>
+                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/marker.png"> Bogor, Indonesia</li>
+            </ul>
+
+            <h2>Tentang Saya</h2>
+            <p>Saya berpengalaman dalam pengelolaan database dan sistem berbasis web. Aktif sebagai content creator, dengan fokus pada musik dan produksi konten kreatif. Memiliki kemampuan manajemen proyek, pemecahan masalah, dan berpikir strategis.</p>
+
+            <h2>Pendidikan</h2>
+            <p><strong>SMK Akuntansi</strong><br>Lulus tahun 2010</p>
+
+            <h2>Kreativitas</h2>
+            <ul>
+                <li>Pembuatan Konten</li>
+                <li>Produksi Musik</li>
+                <li>Penulisan Lagu</li>
+                <li>Manajemen Proyek</li>
+            </ul>
+        </div>
+
+        <div class="right-column">
+            <h2>Pengalaman Kerja</h2>
+            <ul>
+                <li><strong>Manager IT</strong> - KSPSS Baytul Ikhtiar (2025)</li>
+                <li><strong>Staff IT</strong> - KSPSS Baytul Ikhtiar (2022–2024)<br>- Pemeliharaan perangkat lunak dan data.</li>
+                <li><strong>Data Engineer</strong> - KSPSS Baytul Ikhtiar (2019–2021)<br>- Optimasi sistem database.</li>
+                <li><strong>Staff R&D</strong> - KSPSS Baytul Ikhtiar (2016–2018)<br>- Riset dan peningkatan efisiensi sistem.</li>
+                <li><strong>Expert Staff</strong> - Water.org (Bogor)<br>- Strategi keuangan program air bersih.</li>
+                <li><strong>Account Officer</strong> - Bogor & Sukabumi</li>
+            </ul>
+
+            <h2>Keahlian Teknis</h2>
+            <ul>
+                <li>Manajemen Database</li>
+                <li>Pemeliharaan Sistem Web</li>
+                <li>SQL Query Writing</li>
+                <li>Google Spreadsheet</li>
+                <li>Google Apps Script</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        &copy; 2025 Yudi Permana. All rights reserved.
+    </footer>
 </body>
 </html>
